Copy and paste operation on f-curves do not respect keyframe tangent handles... #41266

Closed
opened 2014-07-31 10:28:28 +02:00 by Ajlan Altug · 12 comments

System Information
win7 sp1 2XAsus ROG

Blender Version
2.71

Short description of error

I guess the title says it all... My animators were dismayed quite a bit when they saw this happening. Hoping its me again this time, cuz if Blender can't copy tangent handle orientations and paste them, that's a huge drag for animators... :(

Exact steps for others to reproduce the error
I've prepared a little demonstration video to clearly illustrate my problem... The scene file is also included in the rar file.

OZMO_TRAIN_RV01_01.rar

Cheers;

AJ

**System Information** win7 sp1 2XAsus ROG **Blender Version** 2.71 **Short description of error** I guess the title says it all... My animators were dismayed quite a bit when they saw this happening. Hoping its me again this time, cuz if Blender can't copy tangent handle orientations and paste them, that's a huge drag for animators... :( **Exact steps for others to reproduce the error** I've prepared a little demonstration video to clearly illustrate my problem... The scene file is also included in the rar file. [OZMO_TRAIN_RV01_01.rar](https://archive.blender.org/developer/F100654/OZMO_TRAIN_RV01_01.rar) Cheers; AJ
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ajlanaltug

Added subscriber: @ajlanaltug

Added subscriber: @zeauro

Added subscriber: @zeauro

I think there is a limitation for selecting and copying keyframes n Graph Editor.
You have to select f-curve and press V in source channel to hide all the others before copying.

Then, when you paste f-curves, default type of paste operator is set to Mix. So result is mixed with previous keyframe needed for F-curve creation.
If you press F6, you can change it to Overwrite All.
Previous Keyframe would be overwritten by the one at same frame and it would not mess-up tangent of copied keyframes that have handles type set to aligned.

I think there is a limitation for selecting and copying keyframes n Graph Editor. You have to select f-curve and press V in source channel to hide all the others before copying. Then, when you paste f-curves, default type of paste operator is set to Mix. So result is mixed with previous keyframe needed for F-curve creation. If you press F6, you can change it to Overwrite All. Previous Keyframe would be overwritten by the one at same frame and it would not mess-up tangent of copied keyframes that have handles type set to aligned.
Author

Oh, thank goodness... It's so kind of you to get back to me on this board for a post that seemingly otherwise had to have been posted on a forum elsewhere. thank you, I appreciate it :) I've gone through the manual quite a bit, yet this must have escaped me somehow. The way it went though, I kinda tended to see it much as a limitation or maybe a bug, so I decided to post here.

Again, thank you for devoting your time, I know you guys are pretty busy, but thank you all the same :)

Cheers :)

AJ

Oh, thank goodness... It's so kind of you to get back to me on this board for a post that seemingly otherwise had to have been posted on a forum elsewhere. thank you, I appreciate it :) I've gone through the manual quite a bit, yet this must have escaped me somehow. The way it went though, I kinda tended to see it much as a limitation or maybe a bug, so I decided to post here. Again, thank you for devoting your time, I know you guys are pretty busy, but thank you all the same :) Cheers :) AJ

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscribers: @mont29, @JoshuaLeung

Added subscribers: @mont29, @JoshuaLeung

@mont29, @JoshuaLeung, any ideas here?

@mont29, @JoshuaLeung, any ideas here?
Bastien Montagne self-assigned this 2014-08-26 17:17:43 +02:00

This issue was referenced by 6891f1c9e0

This issue was referenced by 6891f1c9e05bd67eb98c37fb05157775590e6eac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6891f1c9e0.

Closed by commit 6891f1c9e0.

That commit fixes one specific issue - before, pasting a curve over another ones having keyframes at the same time would not override existing keyframes' handles properties.

Copy/paste of fcurves remain a bit rough on the edges, but that's more like usual TODO, no more bug here. Thanks for the report! :)

That commit fixes one specific issue - before, pasting a curve over another ones having keyframes at the same time would not override existing keyframes' handles properties. Copy/paste of fcurves remain a bit rough on the edges, but that's more like usual TODO, no more bug here. Thanks for the report! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41266
No description provided.