Fix T41266: Copy and paste operation on f-curves do not respect keyframe tangent handles...

Added an extra option to `insert_bezt_fcurve()`, to allow full override of existing
keyframes when pasting (in this case, we do not want to inherit handles from existing
curve!).