source/blender/makesdna/DNA_anim_types.h
@@ -793,6 +793,9 @@ typedef enum eInsertKeyFlags {
 	INSERTKEY_REPLACE 	= (1<<4),	/* only replace an existing keyframe (this overrides INSERTKEY_NEEDED) */
 	INSERTKEY_XYZ2RGB	= (1<<5),	/* transform F-Curves should have XYZ->RGB color mode */
 	INSERTKEY_NO_USERPREF	= (1 << 6),	/* ignore user-prefs (needed for predictable API use) */
+	/* Allow to make a full copy of new key into existing one, if any, instead of 'reusing' existing handles.
+	 * Used by copy/paste code. */
+	INSERTKEY_OVERWRITE_FULL = (1<<7),
 } eInsertKeyFlags;
 
 /* ************************************************ */
